--- a/docker-compose-micros.yml
+++ b/docker-compose-micros.yml
@@ -9,8 +9,8 @@ services:
       STORAGE_PATH: "/storage"
     networks:
       - logging
-    deploy:
-      labels:
+    # deploy:
+    #   labels:
 
   thumbnailer:
     image: maanex/thumbnailer:latest
