--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -11,10 +11,12 @@ services:
       - --providers.docker.exposedbydefault=false
       - --entrypoints.http.address=:80
       - --entrypoints.https.address=:443
+      #* for cloudflare proxy
+      - --entrypoints.https.forwardedHeaders.trustedIPs=173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/12,172.64.0.0/13,131.0.72.0/22
       - --entrypoints.metrics.address=:8082
-      # - --certificatesresolvers.letsencrypt.acme.email=${EMAIL?Variable not set}
-      # - --certificatesresolvers.letsencrypt.acme.storage=/certificates/acme.json
-      # - --certificatesresolvers.letsencrypt.acme.httpChallenge.entryPoint=http
+      - --certificatesresolvers.letsencrypt.acme.email=team@freestuffbot.xyz
+      - --certificatesresolvers.letsencrypt.acme.storage=/certificates/acme.json
+      - --certificatesresolvers.letsencrypt.acme.httpChallenge.entryPoint=http
       - --metrics.prometheus
       - --metrics.prometheus.entryPoint=metrics
     networks:
