--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -16,8 +16,8 @@ services:
       - --entrypoints.metrics.address=:8082
       - --certificatesresolvers.letsencrypt.acme.email=team@freestuffbot.xyz
       - --certificatesresolvers.letsencrypt.acme.storage=/certificates/acme.json
-      - --certificatesresolvers.letsencrypt.acme.httpChallenge.entryPoint=http
-      - --certificatesresolvers.letsencrypt.acme.httpChallenge.provider=cloudflare
+      - --certificatesresolvers.letsencrypt.acme.dnschallenge=true
+      - --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=cloudflare
       - --certificatesresolvers.letsencrypt.acme.caServer = "https://acme-staging-v02.api.letsencrypt.org/directory"
       - --metrics.prometheus
       - --metrics.prometheus.entryPoint=metrics
