--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -43,13 +43,12 @@ services:
       labels:
         - traefik.enable
         - traefik.docker.network=traefik-public
-        - traefik.https.services.traefik-api.loadbalancer.server.port=8080
+        - traefik.http.services.traefik-api.loadbalancer.server.port=8080
         - traefik.http.routers.traefik-api.rule=Host(`traefik.infra.maanex.me`)
         - traefik.http.routers.traefik-api.entrypoints=https
-        - traefik.http.routers.traefik-api.tls=true
+        - traefik.http.routers.traefik-api.tls
         - traefik.http.routers.traefik-api.service=api@internal
-        - traefik.http.routers.traefik-api.tls.certresolver=le
-        - traefik.http.routers.traefik.tls.certresolver=letsencrypt
+        - traefik.http.routers.traefik-api.tls.certresolver=letsencrypt
         
   prometheus:
     image: prom/prometheus:v2.1.0
@@ -94,9 +93,9 @@ services:
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
-        - traefik.https.routers.grafana.entrypoints=https
-        - traefik.https.routers.grafana.rule=Host(`monitoring.infra.maanex.me`)
-        - traefik.https.services.grafana.loadbalancer.server.port=3000
+        - traefik.http.routers.grafana.entrypoints=https
+        - traefik.http.routers.grafana.rule=Host(`monitoring.infra.maanex.me`)
+        - traefik.http.services.grafana.loadbalancer.server.port=3000
 
 
 networks:
