--- a/docker-compose-swarmpit.yml
+++ b/docker-compose-swarmpit.yml
@@ -33,9 +33,9 @@ services:
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
-        - traefik.https.routers.swarmpit.entrypoints=https
-        - traefik.https.routers.swarmpit.rule=Host(`cluster.infra.maanex.me`)
-        - traefik.https.services.swarmpit.loadbalancer.server.port=8080
+        - traefik.http.routers.swarmpit.entrypoints=https
+        - traefik.http.routers.swarmpit.rule=Host(`cluster.infra.maanex.me`)
+        - traefik.http.services.swarmpit.loadbalancer.server.port=8080
 
   db:
     image: couchdb:2.3.0
