--- a/docker-compose-apps.yml
+++ b/docker-compose-apps.yml
@@ -23,9 +23,9 @@ services:
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
-        - traefik.https.routers.manager.entrypoints=https
-        - traefik.https.routers.manager.rule=Host(`api.freestuffbot.xyz`)
-        - traefik.https.services.manager.loadbalancer.server.port=9002
+        - traefik.http.routers.manager.entrypoints=https
+        - traefik.http.routers.manager.rule=Host(`api.freestuffbot.xyz`)
+        - traefik.http.services.manager.loadbalancer.server.port=9002
 
 networks:
   traefik-public:
