--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -6,8 +6,8 @@ services:
     command:
       # - --api.insecure
       - --api.dashboard
-      - --providers.docker
-      - --providers.docker.swarmmode
+      - --providers.docker=true
+      - --providers.docker.swarmmode=true
       - --providers.docker.exposedbydefault=false
       - --entrypoints.http.address=:80
       - --entrypoints.https.address=:443
@@ -93,9 +93,10 @@ services:
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
+        - traefik.http.services.grafana.loadbalancer.server.port=3000
         - traefik.http.routers.grafana.entrypoints=https
         - traefik.http.routers.grafana.rule=Host(`monitoring.infra.maanex.me`)
-        - traefik.http.services.grafana.loadbalancer.server.port=3000
+        - traefik.http.routers.grafana.tls.certresolver=letsencrypt
 
 
 networks:
