--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -30,6 +30,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - traefik-public-certificates:/certificates
+    env:
+      CF_DNS_API_TOKEN_FILE: /run/secrets/cf-api-token
+      CF_ZONE_API_TOKEN_FILE: /run/secrets/cf-api-token
     deploy:
       mode: global
       placement:
