--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -30,6 +30,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - traefik-public-certificates:/certificates
+    environment:
+      CF_DNS_API_TOKEN_FILE: /run/secrets/cf-api-token
+      CF_ZONE_API_TOKEN_FILE: /run/secrets/cf-api-token
     deploy:
       mode: global
       placement:
@@ -40,9 +43,6 @@ services:
         delay: 10s
       restart_policy:
         condition: on-failure
-      env:
-        CF_DNS_API_TOKEN_FILE: /run/secrets/cf-api-token
-        CF_ZONE_API_TOKEN_FILE: /run/secrets/cf-api-token
       labels:
         - traefik.enable
         - traefik.docker.network=traefik-public
