--- a/production/docker-compose-apps.yml
+++ b/production/docker-compose-apps.yml
@@ -6,9 +6,12 @@ services:
     environment:
       FSM_LUMBERER_URL: "http://micros_lumberer:9914"
       FSM_HELPER_ID: "855181940784627712"
+      NODE_ENV: "production"
     networks:
       - traefik-public
       - logging
+    ports:
+      - 9002:9002 # TODO remove with traefik
     secrets:
       - FSM_THUMBNAILER_PRIVATE_KEY
       - FSM_SERVERAUTH_PRIVATE_KEY
