--- a/production/docker-compose-gg1.yml
+++ b/production/docker-compose-gg1.yml
@@ -14,7 +14,7 @@ services:
       - FSB_FSAPI_KEY
       - FSB_SENTRY_DSN
     deploy:
-      mode: global
+      mode: replicated
       replicas: 1
       placement:
         constraints:
