--- a/production/docker-compose-micros.yml
+++ b/production/docker-compose-micros.yml
@@ -22,6 +22,9 @@ services:
     ports:
       - 9915:9915 # TODO remove with traefik
     deploy:
+      placement:
+        constraints:
+          - node.role == manager
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
