--- a/production/docker-compose-gg1.yml
+++ b/production/docker-compose-gg1.yml
@@ -6,6 +6,7 @@ services:
     environment:
       NODE_ENV: "production"
       NODE_ID: "gg1"
+      FSB_REDIS_HOST: "infra_redis"
     # networks:
     #   - logging
     secrets:
@@ -21,9 +22,11 @@ services:
         constraints:
           - node.hostname == gg1
 
-# networks:
-#   logging:
-#     external: true
+networks:
+  redis:
+    external: true
+  # logging:
+  #   external: true
 
 secrets:
   FSB_DBOT_TOKEN:
