new internal network for manager worker sockets
So that it doesn't have to go through cloudflare and whatnot

--- a/production/docker-compose-apps.yml
+++ b/production/docker-compose-apps.yml
@@ -10,6 +10,7 @@ services:
     networks:
       - traefik-public
       - logging
+      - fsm-sockets
     ports:
       - 9002:9002 # TODO remove with traefik
     secrets:
@@ -38,6 +39,8 @@ networks:
   traefik-public:
     external: true
   logging:
+    external: true
+  fsm-sockets:
     external: true
 
 secrets:
