--- a/production/docker-compose-co1.yml
+++ b/production/docker-compose-co1.yml
@@ -24,6 +24,9 @@ services:
       placement:
         constraints:
           - node.hostname == co1
+      update_config:
+        parallelism: 1
+        delay: 30s
 
 networks:
   redis:
