--- a/production/docker-compose-infra.yml
+++ b/production/docker-compose-infra.yml
@@ -57,35 +57,33 @@ services:
   #       - traefik.http.routers.traefik-api.tls.domains[1].main=infra.maanex.me
   #       - traefik.http.routers.traefik-api.tls.domains[1].sans=*.infra.maanex.me
         
-  # prometheus:
-  #   image: prom/prometheus:v2.1.0
-  #   volumes:
-  #     # - prometheus-data:/prometheus
-  #     - ./prometheus/:/etc/prometheus/
-  #   command:
-  #     - '--config.file=/etc/prometheus/prometheus.yml'
-  #     - '--storage.tsdb.path=/prometheus'
-  #   networks:
-  #     - metrics
-  #   deploy:
-  #     placement:
-  #       constraints:
-  #       - node.role == manager
-  #     restart_policy:
-  #       condition: on-failure
-  #     # labels:
-  #       # - traefik.enable=true
-  #       # - traefik.docker.network=traefik-public
-  #       # - traefik.http.routers.prometheus.entrypoints=http
-  #       # - traefik.http.routers.prometheus.rule=Host(`red.localhost`)
-  #       # - traefik.http.services.prometheus.loadbalancer.server.port=9090
+  prometheus:
+    image: prom/prometheus:v2.1.0
+    volumes:
+      - prometheus-data:/prometheus
+      - ./prometheus/:/etc/prometheus/
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    networks:
+      - metrics
+    deploy:
+      placement:
+        constraints:
+        - node.role == manager
+      # labels:
+        # - traefik.enable=true
+        # - traefik.docker.network=traefik-public
+        # - traefik.http.routers.prometheus.entrypoints=http
+        # - traefik.http.routers.prometheus.rule=Host(`red.localhost`)
+        # - traefik.http.services.prometheus.loadbalancer.server.port=9090
 
   grafana:
     image: grafana/grafana
     # depends_on:
     #   - prometheus
     volumes:
-      # - grafana-data:/var/lib/grafana
+      - grafana-data:/var/lib/grafana
       - ./grafana/provisioning/:/etc/grafana/provisioning/
     env_file:
       - ./grafana/config.monitoring
@@ -98,13 +96,13 @@ services:
       placement:
         constraints:
           - node.role == manager
-      labels:
-        - traefik.enable=true
-        - traefik.docker.network=traefik-public
-        - traefik.http.services.grafana.loadbalancer.server.port=3000
-        - traefik.http.routers.grafana.entrypoints=https
-        - traefik.http.routers.grafana.rule=Host(`monitoring.infra.maanex.me`)
-        - traefik.http.routers.grafana.tls.certresolver=letsencrypt
+      # labels:
+      #   - traefik.enable=true
+      #   - traefik.docker.network=traefik-public
+      #   - traefik.http.services.grafana.loadbalancer.server.port=3000
+      #   - traefik.http.routers.grafana.entrypoints=https
+      #   - traefik.http.routers.grafana.rule=Host(`monitoring.infra.maanex.me`)
+      #   - traefik.http.routers.grafana.tls.certresolver=letsencrypt
 
   redis:
     image: redis
