--- a/production/docker-compose-infra.yml
+++ b/production/docker-compose-infra.yml
@@ -62,7 +62,7 @@ services:
     volumes:
       - prometheus-data:/prometheus
       - /root/services/deployment/production/prometheus/:/etc/prometheus/
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
