mmmmm okay im gamer

--- a/production/prometheus/prometheus.yml
+++ b/production/prometheus/prometheus.yml
@@ -13,6 +13,9 @@ scrape_configs:
       - source_labels: [__meta_dockerswarm_task_desired_state]
         regex: running
         action: keep
+      - source_labels: [__meta_dockerswarm_network_name]
+        regex: metrics
+        action: keep
       - source_labels: [__meta_dockerswarm_service_label_prometheus_job]
         regex: .+
         action: keep
