--- a/production/docker-compose-gg1.yml
+++ b/production/docker-compose-gg1.yml
@@ -10,7 +10,7 @@ services:
       FSB_WORKER_HOST: "ws://manager:9002"
       FSB_SERVER_ENABLE: true
       FSB_SERVER_PORT: "80"
-      FSB_SERVER_METRICS_ENDPOINT: "/metrics"
+      FSB_METRICS_ENDPOINT: "/metrics"
     networks:
       - redis
       - fsm-sockets
