--- a/production/docker-compose-gg1.yml
+++ b/production/docker-compose-gg1.yml
@@ -8,7 +8,7 @@ services:
       NODE_ID: "gg1"
       FSB_REDIS_HOST: "redis"
       FSB_WORKER_HOST: "ws://manager:9002"
-      FSB_SERVER_ENABLE: true
+      FSB_SERVER_ENABLE: "true"
       FSB_SERVER_PORT: "80"
       FSB_METRICS_ENDPOINT: "/metrics"
     networks:
