--- a/production/docker-compose-do1.yml
+++ b/production/docker-compose-do1.yml
@@ -8,10 +8,13 @@ services:
       NODE_ID: "do1"
       FSB_REDIS_HOST: "redis"
       FSB_WORKER_HOST: "ws://manager:9002"
+      FSB_SERVER_ENABLE: "true"
+      FSB_SERVER_PORT: "80"
+      FSB_METRICS_ENDPOINT: "/metrics"
     networks:
       - redis
       - fsm-sockets
-    # - logging
+      - metrics
     secrets:
       - FSB_DBOT_TOKEN
       - FSB_DBOT_ID
@@ -21,6 +24,8 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      labels:
+        - prometheus-job=fsb
       placement:
         constraints:
           - node.hostname == do1
@@ -30,8 +35,8 @@ networks:
     external: true
   fsm-sockets:
     external: true
-  # logging:
-  #   external: true
+  metrics:
+    external: true
 
 secrets:
   FSB_DBOT_TOKEN:
