--- a/development/docker-compose-micros.yml
+++ b/development/docker-compose-micros.yml
@@ -1,37 +1,18 @@
 version: "3.3"
 
 services:
-  lumberer:
-    image: maanex/lumberer:latest
-    volumes:
-      - logfiles:/storage
+  gaexporter:
+    image: ghcr.io/maanex/googleanalytics_exporter:master
     environment:
-      STORAGE_PATH: "/storage"
-    networks:
-      - logging
-    # deploy:
-    #   labels:
+      GA_VIEWID: "ga:215657062" # google analytics view id
+      GA_INTERVAL: 60
+      GA_PORT: 80
+      GA_METRICS: "rt:pageviews rt:activeUsers"
+    ports:
+      - 1234:80
+    secrets:
+      - GA_CREDS
 
-  thumbnailer:
-    image: maanex/thumbnailer:latest
-    environment:
-      FREESTUFF_KEY: "verysecret"
-      METRICS_AUTH: "yikes"
-    networks:
-      - traefik-public
-    deploy:
-      labels:
-        - traefik.enable=true
-        - traefik.docker.network=traefik-public
-        - traefik.http.services.thumbnailer.loadbalancer.server.port=9915
-        - traefik.http.routers.thumbnailer.entrypoints=http
-        - traefik.http.routers.thumbnailer.rule=Host(`thumbnailer.localhost`)
-
-networks:
-  traefik-public:
+secrets:
+  GA_CREDS:
     external: true
-  logging:
-    external: true
-
-volumes:
-  logfiles: {}
