--- a/production/docker-compose-micros.yml
+++ b/production/docker-compose-micros.yml
@@ -34,6 +34,16 @@ services:
   #       - traefik.http.routers.thumbnailer.entrypoints=https
   #       - traefik.http.routers.thumbnailer.rule=Host(`thumbnails.freestuffbot.xyz`)
   #       - traefik.http.routers.thumbnailer.tls.certresolver=letsencrypt
+  
+  gaexporter:
+    image: ghcr.io/maanex/googleanalytics_exporter:master
+    environment:
+      GA_VIEWID: "ga:215657062" # google analytics view id
+      GA_INTERVAL: 60
+      GA_PORT: 80
+      GA_METRICS: "rt:pageviews rt:activeUsers"
+    secrets:
+      - GA_CREDS
 
 networks:
   traefik-public:
@@ -43,3 +53,7 @@ networks:
 
 volumes:
   logfiles: {}
+
+secrets:
+  GA_CREDS:
+    external: true
