--- a/production/docker-compose-micros.yml
+++ b/production/docker-compose-micros.yml
@@ -50,7 +50,7 @@ services:
       mode: replicated
       replicas: 1
       labels:
-        - prometheus-job=fsb
+        - prometheus-job=ga
       placement:
         constraints:
           - node.role == manager
