--- a/production/docker-compose-minecraft.yml
+++ b/production/docker-compose-minecraft.yml
@@ -7,7 +7,7 @@ services:
       EULA: "TRUE"
       TYPE: "SPIGOT"
       VERSION: "1.18"
-      MEMORY: "6G"
+      MEMORY: "4G"
     ports:
       - 25565:25565
       - 80:80
@@ -19,6 +19,13 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      resources:
+        limits:
+          cpus: '3'
+          memory: 4G
+        reservations:
+          cpus: '2'
+          memory: 3G
       placement:
         constraints:
           - node.hostname == mc
