--- a/production/docker-compose-minecraft.yml
+++ b/production/docker-compose-minecraft.yml
@@ -9,8 +9,12 @@ services:
       VERSION: "1.18"
       MEMORY: "4G"
     ports:
-      - 25565:25565
-      - 80:80
+      - target: 25565
+        published: 25565
+        mode: host
+      - target: 80
+        published: 80
+        mode: host
     volumes:
       - /root/data:/data
     tty: true
