open port for udp too

--- a/production/docker-compose-minecraft.yml
+++ b/production/docker-compose-minecraft.yml
@@ -11,6 +11,11 @@ services:
     ports:
       - target: 25565
         published: 25565
+        protocol: tcp
+        mode: host
+      - target: 25565
+        published: 25565
+        protocol: udp
         mode: host
       - target: 80
         published: 80
